tests/baselines/reference/tsxTypeArgumentPartialDefinitionStillErrors.errors.txt
tests/cases/compiler/file.tsx(11,2): error TS2786: 'SFC' cannot be used as a JSX component.
  Its return type 'string' is not a valid JSX element.
tests/cases/compiler/file.tsx(11,14): error TS2322: Type 'number' is not assignable to type 'string'.


==== tests/cases/compiler/file.tsx (2 errors) ====
    declare namespace JSX {
        interface Element {
            render(): Element | string | false;
        }
    }
    
    function SFC<T>(props: Record<string, T>) {
        return '';
    }
    
    <SFC<string> prop={1}></SFC>; // should error
     ~~~
!!! error TS2786: 'SFC' cannot be used as a JSX component.
!!! error TS2786:   Its return type 'string' is not a valid JSX element.
                 ~~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    